--- a/f2_common_format/Cargo.toml
+++ b/f2_common_format/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-represent = { path = "../fo_network/represent" }
-represent_derive = { path = "../fo_network/represent_derive" }
-num_enum = "0.7"
-fo_net_protocol = { path = "../fo_network/net_protocol" }
-bytes = "1"
-bytemuck = { version = "1", features = ["min_const_generics"] }
+represent.workspace = true
+represent_extra.workspace = true
+num_enum.workspace = true
+bytes.workspace = true
+bytemuck.workspace = true
