--- a/f2_map_converter/Cargo.toml
+++ b/f2_map_converter/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-f2_common_format = { path = "../f2_common_format" }
-f2_map_format = { path = "../f2_map_format" }
-f2_proto_format = { path = "../f2_proto_format" }
-hashbrown = "0.14"
-walkdir = "2"
+f2_common_format.workspace = true
+f2_map_format.workspace = true
+f2_proto_format.workspace = true
+
+hashbrown.workspace = true
+walkdir.workspace = true
